--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-
   <body>
+      <section id="welcom-section">
+        <h1>We are Microverse trial Partner</h1>
+      </section>
+      <section id="projects">
+        
+      </section>
     
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
