--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-      <section id="welcom-section">
-        <h1>We are Microverse trial Partner</h1>
-      </section>
-      <section id="projects">
-        
-      </section>
-    
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script  src="js/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <nav id="navbar" class="nav">
+    <ul class="nav-list">
+      <li><a href="#welcom-section">About</a></li>
+      <li><a href="#projects">Works</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="welcom-section">
+    <h1>We are Microverse trial Partner</h1>
+  </section>
+
+  <section id="projects">
+    <div class="project-tile">
+      <a href="#">Project Link</a>
+      <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage"
+        id="profile-link" target="_blank">
+        Project Link
+      </a>
+    </div>
+  </section>
+
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="js/index.js"></script>
+</body>
+
 </html>
