--- a/index.html
+++ b/index.html
@@ -17,19 +17,31 @@
     </ul>
   </nav>
 
-  <section id="welcom-section">
+  <section id="welcom-section" class="welcome-section">
     <h1>We are Microverse trial Partner</h1>
   </section>
 
-  <section id="projects">
-    <div class="project-tile">
-      <a href="#">Project Link</a>
-      <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage"
-        id="profile-link" target="_blank">
-        Project Link
-      </a>
+  <section id="projects" class="projects-section">
+    <h2 class="projects-section-header">These are our project</h2>
+    <div class="project-grid">
+      <a href="" class="project project-title"></a>
+      <a href="" class="project project-title"></a>
     </div>
   </section>
+  <section id="contact" class="contact-section">
+    <div class="contact-section-header">
+      <h2>Let's work togeather...</h2>
+    </div>
+    <div class="contact-links">
+      <a href="" target="_blank" class="btn contact-details"><i class="fa-brands fa-github"></i>GitHub</a>
+      <a href="" target="_blank" class="btn contact-details"><i
+          class="fa-brands fa-square-facebook"></i></i>Facebook</a>
+    </div>
+  </section>
+  <footer>
+    <p>This is a trial portifolio</p>
+  </footer>
+ 
 
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
